guides/v2.0/release-notes/thirdparty_ee.md
---
layout: default
group: release-notes
subgroup: 99_third
menu_title: Magento Commerce third-party licenses
menu_order: 3
version: 2.0
github_link: release-notes/thirdparty_ee.md
---

This page contains links to license agreements of the third party components used within Magento Commerce (formerly Enterprise Edition).  Click the **License** links to view the end user license agreement for the corresponding software.

Name|Version|License Name|Available From|Link to License
---|---|---|---|---
braintree/braintree_php || MIT|[Source](https://github.com/braintree/braintree_php)|[License](https://github.com/braintree/braintree_php/blob/master/LICENSE)
colinmollenhour/credis || MIT|[Source](https://github.com/colinmollenhour/credis)|[License](https://github.com/colinmollenhour/credis/blob/master/LICENSE)
colinmollenhour/php-redis-session-abstract || BSD-3-Clause|[Source](https://github.com/colinmollenhour/php-redis-session-abstract)|[License](https://github.com/colinmollenhour/php-redis-session-abstract#license)
composer/composer || MIT|[Source](https://github.com/composer/composer)|[License](https://github.com/composer/composer/blob/master/LICENSE)
doctrine/instantiator || MIT|[Source](https://github.com/doctrine/instantiator)|[License](https://github.com/doctrine/instantiator/blob/master/LICENSE)
fabpot/php-cs-fixer || MIT|[Source](https://www.versioneye.com/php/fabpot:php-cs-fixer/dev-master)|[License](http://spdx.org/licenses/MIT.html)
justinrainbow/json-schema || BSD-3-Clause|[Source](https://github.com/justinrainbow/json-schema)|[License](https://github.com/justinrainbow/json-schema/blob/master/LICENSE)
league/climate || MIT|[Source](https://github.com/thephpleague/climate)|[License](https://github.com/thephpleague/climate/blob/master/LICENSE.md)
lusitanian/oauth || MIT|[Source](https://github.com/Lusitanian/PHPoAuthLib)|[License](https://github.com/Lusitanian/PHPoAuthLib/blob/master/LICENSE)
monolog/monolog || MIT|[Source](https://github.com/Seldaek/monolog)|[License](https://github.com/Seldaek/monolog/blob/master/LICENSE)
oyejorge/less.php || Apache-2.0|[Source](https://github.com/oyejorge/less.php)|[License](https://github.com/oyejorge/less.php/blob/master/LICENSE)
pdepend/pdepend || BSD-3-Clause|[Source](https://github.com/pdepend/pdepend)|[License](https://github.com/pdepend/pdepend/blob/master/LICENSE)
pelago/emogrifier || MIT|[Source](https://github.com/jjriv/emogrifier)|[License](https://github.com/jjriv/emogrifier/blob/master/LICENSE)
phpmd/phpmd || BSD-3-Clause|[Source](https://github.com/phpmd/phpmd)|[License](https://github.com/phpmd/phpmd/blob/master/LICENSE)
phpseclib/phpseclib || MIT|[Source](https://github.com/phpseclib/phpseclib)|[License](https://github.com/phpseclib/phpseclib/blob/master/LICENSE)
phpunit/php-code-coverage || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-code-coverage)|[License](https://github.com/sebastianbergmann/php-code-coverage/blob/master/LICENSE)
phpunit/php-file-iterator || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-file-iterator)|[License](https://github.com/sebastianbergmann/php-file-iterator/blob/master/LICENSE)
phpunit/php-text-template || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-text-template)|[License](https://github.com/sebastianbergmann/php-text-template/blob/master/LICENSE)
phpunit/php-timer || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-timer)|[License](https://github.com/sebastianbergmann/php-timer/blob/master/LICENSE)
phpunit/php-token-stream || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-token-stream)|[License](https://github.com/sebastianbergmann/php-token-stream/blob/master/LICENSE)
phpunit/phpunit-mock-objects || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/phpunit-mock-objects)|[License](https://github.com/sebastianbergmann/phpunit-mock-objects/blob/master/LICENSE)
phpunit/phpunit || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/phpunit)|[License](https://github.com/sebastianbergmann/phpunit/blob/master/LICENSE)
psr/log || MIT|[Source](https://github.com/php-fig/log)|[License](https://github.com/php-fig/log/blob/master/LICENSE)
sebastian/comparator || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/comparator)|[License](https://github.com/sebastianbergmann/comparator/blob/master/LICENSE)
sebastian/diff || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/diff)|[License](https://github.com/sebastianbergmann/diff/blob/master/LICENSE)
sebastian/environment || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/environment)|[License](https://github.com/sebastianbergmann/environment/blob/master/LICENSE)
sebastian/exporter || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/exporter)|[License](https://github.com/sebastianbergmann/exporter/blob/master/LICENSE)
sebastian/recursion-context || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/recursion-context)|[License](https://github.com/sebastianbergmann/recursion-context/blob/master/LICENSE)
sebastian/version || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/version)|[License](https://github.com/sebastianbergmann/version/blob/master/LICENSE)
seld/jsonlint || MIT|[Source](https://github.com/Seldaek/jsonlint)|[License](https://github.com/Seldaek/jsonlint/blob/master/LICENSE)
sjparkinson/static-review || MIT|[Source](https://github.com/sjparkinson/static-review)|[License](https://github.com/sjparkinson/static-review/blob/master/LICENSE)
squizlabs/php_codesniffer || BSD-3-Clause|[Source](https://github.com/squizlabs/PHP_CodeSniffer)|[License](https://github.com/squizlabs/PHP_CodeSniffer/blob/master/licence.txt)
symfony/config || MIT|[Source](https://github.com/symfony/config)|[License](https://github.com/symfony/config/blob/master/LICENSE)
symfony/dependency-injection || MIT|[Source](https://github.com/symfony/dependency-injection)|[License](https://github.com/symfony/dependency-injection/blob/master/LICENSE)
symfony/event-dispatcher || MIT|[Source](https://github.com/symfony/event-dispatcher)|[License](https://github.com/symfony/event-dispatcher/blob/master/LICENSE)
symfony/filesystem || MIT|[Source](https://github.com/symfony/filesystem)|[License](https://github.com/symfony/filesystem/blob/master/LICENSE)
symfony/finder || MIT|[Source](https://github.com/symfony/finder)|[License](https://github.com/symfony/finder/blob/master/LICENSE)
symfony/process || MIT|[Source](https://github.com/symfony/process)|[License](https://github.com/symfony/process/blob/master/LICENSE)
symfony/stopwatch || MIT|[Source](https://github.com/symfony/stopwatch)|[License](https://github.com/symfony/stopwatch/blob/master/LICENSE)
symfony/yaml || MIT|[Source](https://github.com/symfony/yaml)|[License](https://github.com/symfony/yaml/blob/master/LICENSE)
tedivm/jshrink || BSD-3-Clause|[Source](https://github.com/tedious/JShrink)|[License](https://github.com/tedious/JShrink/blob/master/LICENSE)
tubalmartin/cssmin || BSD-3-Clause|[Source](https://github.com/tubalmartin/YUI-CSS-compressor-PHP-port)|
Zend Framework||BSD-3-Clause|[Source](http://framework.zend.com/)|[License](https://framework.zend.com/license)
Cm ||BSD-3-Clause|[Source](https://github.com/colinmollenhour/Cm_RedisSession)|[License 1](https://github.com/colinmollenhour/Cm_RedisSession/blob/master/Cm_RedisSession.xml) [License 2](http://opensource.org/licenses/BSD-3-Clause)
elasticsearch/elasticsearch || Apache-2.0|[Source](https://github.com/elastic/elasticsearch-php)|[License](https://github.com/elastic/elasticsearch-php/blob/master/LICENSE)
guzzlehttp/ringphp || MIT|[Source](https://github.com/guzzle/RingPHP)|[License](https://github.com/guzzle/RingPHP/blob/master/LICENSE)
guzzlehttp/streams || MIT|[Source](https://github.com/guzzle/streams)|[License](https://github.com/guzzle/streams/blob/master/LICENSE)
solarium/solarium || NewBSD|[Source](https://github.com/solariumphp/solarium)|[License](https://github.com/solariumphp/solarium/blob/master/COPYING)
php-amqplib/php-amqplib" |2.5.*| LGPL-2.1|[Source](https://github.com/php-amqplib/php-amqplib)|[License](https://github.com/php-amqplib/php-amqplib/blob/master/LICENSE)
react/promise || MIT|[Source](https://github.com/reactphp/promise)|[License](https://github.com/reactphp/promise/blob/master/LICENSE)
extjs |1.0.1|Open GPL 3.0 (when was included)|[Source](https://www.sencha.com/)|[License](https://www.gnu.org/licenses/lgpl.html)
fotorama|4.6.4 |MIT|[Source](https://github.com/artpolikarpov/fotorama)|[License](https://github.com/artpolikarpov/fotorama/blob/master/MIT-LICENSE)
jquery|1.11.0 |MIT|[Source](https://jquery.com/)|[License](https://jquery.org/license/)
knockoutjs|3.3.0 |MIT|[Source](http://knockoutjs.com/downloads/index.html)|[Source](https://github.com/knockout/knockout/blob/master/LICENSE)
less |2.3.1|Apache License Version 2.0|[Source](https://github.com/less/less.js)|[License](https://github.com/less/less.js/blob/master/LICENSE)
modernizr|2.6.1 |MIT|[Source](https://github.com/Modernizr/Modernizr)|[License](https://github.com/Modernizr/Modernizr/blob/master/LICENSE)
prototype|1.7 |MIT|[Source](http://prototypejs.org)|[License](https://github.com/sstephenson/prototype/blob/master/LICENSE)
requirejs |2.1.11|new BSD or MIT licensed|[Source](https://github.com/requirejs/requirejs)|[License](https://github.com/requirejs/requirejs/blob/master/LICENSE)
scriptaculous|1.8.2 |MIT|[Source](http://script.aculo.us)|[License](http://madrobby.github.io/scriptaculous/license/)
tiny_mce |major: 3; minor: 4.7|GNU LGPL 2.1|[Source](https://www.tinymce.com)|[License](https://github.com/tinymce/tinymce/blob/master/LICENSE.TXT)
angular|1.2.16 |MIT|[Source](https://github.com/angular/angular.js)|[License](https://github.com/angular/angular.js/blob/master/LICENSE)
angular-clickout|1.0.2 |MIT|[Source](https://github.com/neoziro/angular-clickout)|[License](https://github.com/neoziro/angular-clickout#license)
angular-ng-dialog|0.4.0 |MIT|[Source](https://github.com/likeastore/ngDialog)|[License](https://github.com/neoziro/angular-clickout#license)
angular-ng-storage|0.3.0 |MIT|[Source](https://github.com/gsklee/ngStorage)|[License](https://github.com/gsklee/ngStorage/blob/master/LICENSE)
angular-sanitize|1.2.14 |MIT|[Source](https://code.angularjs.org/1.2.14/angular-sanitize.min.js)|[License](https://code.angularjs.org/1.2.14/angular-sanitize.min.js)
angular-ui-bootstrap|0.11.0 |MIT|[Source](http://angular-ui.github.io/bootstrap)|[License](https://github.com/angular-ui/bootstrap/blob/master/LICENSE)
angular-ui-router|0.2.10 |MIT|[Source](http://angular-ui.github.com/)|[License](http://www.opensource.org/licenses/MIT)
bootstrap|3.1.1 |MIT|[Source](http://getbootstrap.com)|[License](https://github.com/twbs/bootstrap/blob/master/LICENSE)
FormData for XMLHttpRequest 2 |-| MIT|[Source](https://gist.github.com/Rob--W/8b5adedd84c0d36aba64)|[License](https://gist.github.com/Rob--W/8b5adedd84c0d36aba64)
matchMedia |-| MIT/BSD|[Source](https://github.com/paulirish/matchMedia.js/)|[License](https://github.com/paulirish/matchMedia.js/blob/master/LICENSE.txt)
moment.js |2.8.1| MIT|[Source](http://momentjs.com)|[License](http://momentjs.com/downloads/moment.js)
MutationObserver |-| BSD|[Source](http://polymer.github.io)|[License](http://polymer.github.io/LICENSE.txt)
Underscore |1.8.2| MIT|[Source](http://underscorejs.org)|[License](https://github.com/jashkenas/underscore/blob/master/LICENSE)
LinLibertineFont|-|GPL 2.0 and the Open Fonts License 1.0|[Source](http://www.linuxlibertine.org)|[License 1](http://www.gnu.org/licenses/old-licenses/gpl-2.0.html) [License 2](http://scripts.sil.org/cms/scripts/page.php)
Swagger |2.0| Apache 2|[Source](https://github.com/swagger-api/swagger-ui)|[License](http://swagger.io/license/)
